tests/fixtures/errors/e0412_array_zero_length.mimz
// expect: E0412
fn f(vals: bits[8][0]) -> bits[8] {
  0
}
module M {
  out o: bits[8]
  o = 0
}
